# agent-adaptor

./: .gitignore  README.md  pyproject.toml
docs/: agent-adapter-runtime-prd.md  implementation-notes.md  milestones.md
docs/hackathon/: article.md  x-post.md
docs/ui/: theme.md
simulation/: agent-adapter.yaml  dashboard-preview-openapi.yaml  dashboard-preview.yaml  demo_prod.py  demo_real_api.py  demo_real_api.yaml  demo_verbose_cycle.py  run_demo.py  setup_usdc.py
simulation/provider_api/: paid_server.py  server.py
simulation/simulation/data-preview/: adapter.db-shm  adapter.db-wal
simulation/tasknet/: server.py
tests/: dummy_plugins.py  helpers.py  test_demo_verbose_cycle.py  test_integration.py  test_management_surface.py  test_runtime_integration.py  test_runtime_unit.py
